<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/headerContainer"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/headerBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#4CAF50" />

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ava" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/infoContainer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerContainer"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/text_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/statusText"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:text="@string/text_name2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_name3"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:background="#227626"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoContainer">

        <TextView
            android:id="@+id/actionOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_name4"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/actionTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_name5"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/actionThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_name6"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridGallery"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        app:columnCount="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionBar">

        <ImageView
            android:id="@+id/imageOne"
            android:layout_width="136dp"
            android:layout_height="112dp"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@drawable/kod1" />

        <ImageView
            android:id="@+id/imageTwo"
            android:layout_width="136dp"
            android:layout_height="112dp"
            app:layout_column="1"
            app:layout_row="0"
            app:srcCompat="@drawable/kod2" />

        <ImageView
            android:id="@+id/imageThree"
            android:layout_width="136dp"
            android:layout_height="112dp"
            app:layout_column="2"
            app:layout_row="0"
            app:srcCompat="@drawable/kod3" />

        <ImageView
            android:id="@+id/imageFour"
            android:layout_width="136dp"
            android:layout_height="112dp"
            app:layout_column="0"
            app:layout_row="1"
            app:srcCompat="@drawable/kod4" />

        <ImageView
            android:id="@+id/imageFive"
            android:layout_width="136dp"
            android:layout_height="112dp"
            app:layout_column="1"
            app:layout_row="1"
            app:srcCompat="@drawable/kod5" />

        <ImageView
            android:id="@+id/imageSix"
            android:layout_width="136dp"
            android:layout_height="112dp"
            app:layout_column="2"
            app:layout_row="1"
            app:srcCompat="@drawable/kod6" />
    </androidx.gridlayout.widget.GridLayout>

    <LinearLayout
        android:id="@+id/footerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridGallery">

        <TextView
            android:id="@+id/bioText"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:text="@string/text_name8"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
